# tgi-food-dist

./: .gitignore  .gitmodules  docker-compose.yml
nginx/: README.md  nginx.conf
server/: Dockerfile  aliases.sh  dev.dockerfile
server/app/: mypy.ini  pyproject.toml
server/app/fooddistserver/: manage.py
server/app/fooddistserver/accounts/: models.py  serializers.py  urls.py  views.py
server/app/fooddistserver/api/: admin.py  models.py  serializers.py  urls.py  views.py
server/app/fooddistserver/api/migrations/: 0001_initial.py  0002_inventoryitem.py
server/app/fooddistserver/fooddistserver/: asgi.py  settings.py  urls.py  wsgi.py
